--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             </div>
         </nav>
         <!-- Contact-->
-        <section class="page-section" id="contact" background-color="#701b1b">
+        <section class="page-section" id="contact" background-color="#701b1b" style="padding-bottom: 80px">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
@@ -108,7 +108,7 @@
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Published by</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">The Regional Institute of Information and Knowledge Management</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">P.O. BOX 24358-00100, Nairobi, Kenya</div></div>
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Company Name</div></div>    
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;<script>document.write(new Date().getFullYear());</script></div></div>    
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
