--- a/submit.html
+++ b/submit.html
@@ -113,7 +113,7 @@
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Published by</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">The Regional Institute of Information and Knowledge Management</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">P.O. BOX 24358-00100, Nairobi, Kenya</div></div>
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Company Name</div></div>    
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;<script>document.write(new Date().getFullYear());</script></div></div>    
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
