Changing the meta tags

--- a/vol6-2-article8.html
+++ b/vol6-2-article8.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="citation_title" content="The Role of Indigenous Knowledge in Attaining Kenya’s Vision 2030: A Literature Review"> 
-    <meta name="citation_abstract_html_url" content="http://rjikm.org/vol6-2-article8.html">
-    <meta name="citation_author" content="Lucy, Kibe">
-    <meta name="citation_publication_date" content="2021/11/3">
-    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management">
-    <meta name="citation_pdf_url" content="http://rjikm.org/vol6-2-article8.htmla"> 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="The Role of Indigenous Knowledge in Attaining Kenya’s Vision 2030: A Literature Review" />
+    <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol6-2-article8.html" />
+    <meta name="citation_author" content="Lucy, Kibe" />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%206.2.8.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="2" />
+    <meta name="citation_firstpage" content="110" />
+    <meta name="citation_lastpage" content="124" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
