--- a/vol6-2-article7.html
+++ b/vol6-2-article7.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="citation_title" content="Induction and Placement Practices as Correlates of Job Performance of Recruited Librarians in Federal Universities in South-South, Nigeria"> 
-    <meta name="citation_abstract_html_url" content="http://rjikm.org/vol6-2-article7.html">
-    <meta name="citation_author" content="Eruvwe, Ufuoma">
-    <meta name="citation_author" content="Okonoko, Vera N."> 
-    <meta name="citation_publication_date" content="2021/11/3">
-    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management">
-    <meta name="citation_pdf_url" content="http://rjikm.org/assets/img/Man%206.2.7.pdf"> 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Induction and Placement Practices as Correlates of Job Performance of Recruited Librarians in Federal Universities in South-South, Nigeria" />
+    <meta name="citation_abstract_html_url" content="https://rjikm.org/vol6-2-article7.html">
+    <meta name="citation_author" content="Eruvwe, Ufuoma" />
+    <meta name="citation_author" content="Okonoko, Vera N." />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%206.2.7.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="2" />
+    <meta name="citation_firstpage" content="97" />
+    <meta name="citation_lastpage" content="109" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
