Inserting the meta tags

--- a/vol6-1-article2.html
+++ b/vol6-1-article2.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="COVID-19 Spread Acceptability, Attitude and Information Accessibility amongst Rural community in Delta State, Nigeria" />
+    <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol6-1-article2.html" />
+    <meta name="citation_author" content="Mercy Arodovwe Igere" />
+    <meta name="citation_author" content="Igere, Bright Esegbuyota" />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/COVID-19%20Spread%20Acceptability,%20Attitude%20and%20Information%20Accessibility%20amongst%20Rural%20community%20in%20Delta%20State,%20Nigeria.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="1" />
+    <meta name="citation_firstpage" content="27" />
+    <meta name="citation_lastpage" content="41" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,7 +73,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Mercy Arodovwe Igere
                             <br>
-                            Department of Library and Information Science, Delta State University 
+                            Department of Library and Information Science, Delta State University
                             <br>
                             Abraka PMB 1 Delta State, Nigeria
                             <br>
@@ -71,7 +82,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Igere, Bright Esegbuyota
                             <br>
-                            Department of Microbiology and Biotechnology, Western Delta University  
+                            Department of Microbiology and Biotechnology, Western Delta University
                             <br>
                             Oghara PMB 10 Delta State, Nigeria
                             <br>
@@ -82,11 +93,11 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            -There are several pieces of unreliable information on the spread of the virus COVID-19. This leads to misconception on the existence and spread of the virus. It also affects the attitude of people, most especially the rural dwellers. This study investigates COVID-19 spread acceptability, attitude and information accessibility in a rural community in Delta State, Nigeria. 
+                            -There are several pieces of unreliable information on the spread of the virus COVID-19. This leads to misconception on the existence and spread of the virus. It also affects the attitude of people, most especially the rural dwellers. This study investigates COVID-19 spread acceptability, attitude and information accessibility in a rural community in Delta State, Nigeria.
                         </p>
-                        <p class="text-white-75 mb-4"> 
+                        <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                            -The study adopted a descriptive survey design. The population for the study was 145,045. A sample of 0.1% of the population was used for analysis. Data was collected using questionnaires. The questionnaires were purposively administered to the sampled respondents in the homes of the ten (10) villages in Uvwie local government area in Effurun, Delta State, Nigeria. 
+                            -The study adopted a descriptive survey design. The population for the study was 145,045. A sample of 0.1% of the population was used for analysis. Data was collected using questionnaires. The questionnaires were purposively administered to the sampled respondents in the homes of the ten (10) villages in Uvwie local government area in Effurun, Delta State, Nigeria.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
@@ -98,7 +109,7 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
-                            -The manuscript is part of our recent study which was informed by the COVID-19 pandemic outbreak, and has not been submitted for evaluation on the purpose of publication in journal. 
+                            -The manuscript is part of our recent study which was informed by the COVID-19 pandemic outbreak, and has not been submitted for evaluation on the purpose of publication in journal.
                         </p>
                         <p class="text-white-75 mb-4">
                             <strong>Keywords</strong>
