--- a/vol6-1-article3.html
+++ b/vol6-1-article3.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Digital Resources Management: A Panacea for Digital Information Service Delivery in Nigerian Academic Libraries" />
+    <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol6-1-article3.html" />
+    <meta name="citation_author" content="Sylvester Israel Ebhonu" />
+    <meta name="citation_author" content="Ademola Ferninand Omosekejimi" />
+    <meta name="citation_author" content="Grace Arerosuoghene Dada" />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Digital%20Resources%20Management%20A%20Panacea%20for%20Digital%20Information%20Service%20Delivery%20in%20Nigerian%20Academic%20Libraries.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="1" />
+    <meta name="citation_firstpage" content="42" />
+    <meta name="citation_lastpage" content="59" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,21 +74,21 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Sylvester Israel Ebhonu (CLN)
                             <br>
-                            Admiralty University Nigeria., 
+                            Admiralty University Nigeria.,
                             <br>
                             Ebhonu-lib@adun.edu.ng
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
-                            Ademola Ferninand Omosekejimi (CLN) 
+                            Ademola Ferninand Omosekejimi (CLN)
                             <br>
-                            Federal University of Petroleum Resources Effurun 
+                            Federal University of Petroleum Resources Effurun
                             <br>
                             omosekejimi.ademola@fupre.edu.ng
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
-                            Grace Arerosuoghene Dada (CLN) 
+                            Grace Arerosuoghene Dada (CLN)
                             <br>
-                            Delta State University Library, Abraka, Delta State, Nigeria 
+                            Delta State University Library, Abraka, Delta State, Nigeria
                             <br>
                             dadagrace10@gmail.com
                         </p>
@@ -85,11 +97,11 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            -The purpose of this study was to examine the concept of digital resources management as a possible enabler of effective digital information service delivery in Nigerian academic libraries. 
+                            -The purpose of this study was to examine the concept of digital resources management as a possible enabler of effective digital information service delivery in Nigerian academic libraries.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                            -A descriptive survey method was adopted for this study. The population of the study comprised of eight hundred and forty-one (841) librarians from 84 university libraries in Southern Nigeria. The entire population of 841 librarians was used in the study. Questionnaires were used to collect data which was analysed using descriptive statistics. 
+                            -A descriptive survey method was adopted for this study. The population of the study comprised of eight hundred and forty-one (841) librarians from 84 university libraries in Southern Nigeria. The entire population of 841 librarians was used in the study. Questionnaires were used to collect data which was analysed using descriptive statistics.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
@@ -107,7 +119,7 @@
                             <strong>Keywords</strong>
                         </p>
                         <p class="text-white-75 mb-4">
-                            Digital Resources, Resources Management, Information Services, Service Delivery, Academic Libraries, Southern Nigeria 
+                            Digital Resources, Resources Management, Information Services, Service Delivery, Academic Libraries, Southern Nigeria
                         </p>
                         <div>
                             <a href="assets/img/Digital Resources Management A Panacea for Digital Information Service Delivery in Nigerian Academic Libraries.pdf" target="blank">Digital Resources Management: A Panacea for Digital Information Service Delivery in Nigerian Academic Libraries</a>
