--- a/vol6-1-article4.html
+++ b/vol6-1-article4.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Modelling and Forecasting of COVID-19 New Cases in the Top 10 Infected African Countries from February 14 to September 06, 2020" />
+    <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol6-1-article4.html" />
+    <meta name="citation_author" content="Alemayehu Siffir Argawu" />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Content%20Recruitment%20and%20Institutional%20Repositories%20in%20Kenyan%20Universities.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="1" />
+    <meta name="citation_firstpage" content="60" />
+    <meta name="citation_lastpage" content="75" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,7 +72,7 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Alemayehu Siffir Argawu
                             <br>
-                            Ambo University, Ambo, Ethiopia 
+                            Ambo University, Ambo, Ethiopia
                             <br>
                             alex089973@gmail.com / alemayehu.siffir@ambou.edu.et
                         </p>
@@ -71,11 +81,11 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            -COVID-19 is a novel coronavirus that has resulted in an outbreak of viral pneumonia around the world. The total case has reached 3,581,783 (shared 78.5%) with 102,201 (84.4%) total deaths and 3,214,512 (78.7%) recoveries in the top 10 infected African countries as of April 28, 2021 at 10:30 am. This study models and forecasts COVID-19 new cases in the top 10 infected African countries from February 14 to September 06, 2020.  
+                            -COVID-19 is a novel coronavirus that has resulted in an outbreak of viral pneumonia around the world. The total case has reached 3,581,783 (shared 78.5%) with 102,201 (84.4%) total deaths and 3,214,512 (78.7%) recoveries in the top 10 infected African countries as of April 28, 2021 at 10:30 am. This study models and forecasts COVID-19 new cases in the top 10 infected African countries from February 14 to September 06, 2020.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
-                            -The COVID-19 new cases data was modelled and forecasted using curve estimation regression model and time series model from February 14 to September 6, 2020. 
+                            -The COVID-19 new cases data was modelled and forecasted using curve estimation regression model and time series model from February 14 to September 6, 2020.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Findings</em>
@@ -87,7 +97,7 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
-                            -The paper contributes a model which can be used to predict occurrence of new COVID-19 cases in top 10 infected African countries. 
+                            -The paper contributes a model which can be used to predict occurrence of new COVID-19 cases in top 10 infected African countries.
                         </p>
                         <p class="text-white-75 mb-4">
                             <strong>Keywords</strong>
