--- a/vol6-1-article5.html
+++ b/vol6-1-article5.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Content Recruitment and Institutional Repositories in Kenyan Universities" />
+    <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol6-1-article5.html" />
+    <meta name="citation_author" content="Sang Lucy Jelagat" />
+    <meta name="citation_author" content="Cephas Odini" />
+    <meta name="citation_author" content="Justus Wamukoya" />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Content%20Recruitment%20and%20Institutional%20Repositories%20in%20Kenyan%20Universities.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="1" />
+    <meta name="citation_firstpage" content="76" />
+    <meta name="citation_lastpage" content="96" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -62,14 +74,14 @@
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Sang Lucy Jelagat
                             <br>
-                            Moi University, School of Information Sciences 
+                            Moi University, School of Information Sciences
                             <br>
                             sanglucy45@gmail.com
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Cephas Odini
                             <br>
-                            Moi University, School of Information Sciences 
+                            Moi University, School of Information Sciences
                             <br>
                             cepodini@gmail.com
                         </p>
@@ -80,13 +92,13 @@
                             <br>
                             jwamukoya1@gmail.com
                         </p>
-                        
+
                         <p>
                             <strong>Abstract</strong>
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Rationale of Study</em>
-                            -The purpose of this paper is to discuss the role of institutional repositories in supporting teaching, learning and research in four selected universities in Kenya. 
+                            -The purpose of this paper is to discuss the role of institutional repositories in supporting teaching, learning and research in four selected universities in Kenya.
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Methodology</em>
@@ -102,7 +114,7 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Originality</em>
-                            - Little has been documented on the effectiveness of content recruitment in institutional repositories in Kenyan universities. Therefore, this paper is a valuable addition to the existing literature on the subject.  
+                            - Little has been documented on the effectiveness of content recruitment in institutional repositories in Kenyan universities. Therefore, this paper is a valuable addition to the existing literature on the subject.
                         </p>
                         <p>
                             <strong>Keywords</strong>
