--- a/vol6-2-article1.html
+++ b/vol6-2-article1.html
@@ -2,17 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta name="citation_title" content="Enhancing security ethical value practices in e-records management at Moi University, Eldoret, Kenya"> 
-    <meta name="citation_abstract_html_url" content="http://rjikm.org/vol6-2-article1.html">
-    <meta name="citation_author" content="Carolyne, Nyaboke M">
-    <meta name="citation_author" content="Stephen, Mutula"> 
-    <meta name="citation_publication_date" content="2021/11/3">
-    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management">
-    <meta name="citation_pdf_url" content="http://rjikm.org/assets/img/Man%206.2.1.pdf"> 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Enhancing security ethical value practices in e-records management at Moi University, Eldoret, Kenya" />
+    <meta name="citation_abstract_html_url" content="https://rjikm.org/vol6-2-article1.html" />
+    <meta name="citation_author" content="Carolyne, Nyaboke M" />
+    <meta name="citation_author" content="Stephen, Mutula" />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://rjikm.org/assets/img/Man%206.2.1.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="2" />
+    <meta name="citation_firstpage" content="1" />
+    <meta name="citation_lastpage" content="20" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
