--- a/vol6-1-article1.html
+++ b/vol6-1-article1.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Psychological Capital and Information Literacy Skills as Determinants of Job Performance of Academic Library Employees in State Universities in South West, Nigeria" />
+    <meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol6-1-article1.html" />
+    <meta name="citation_author" content="Sunday O. Popoola" />
+    <meta name="citation_author" content="William Peter Tabuke" />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Psychological%20Capital%20and%20Information%20Literacy%20Skills%20as%20Determinants%20of%20Job%20Performance%20of%20Academic%20Library%20Employees%20in%20State%20Universities%20in%20South%20West,%20Nigeria.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="1" />
+    <meta name="citation_firstpage" content="1" />
+    <meta name="citation_lastpage" content="26" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
