--- a/vol6-2-article4.html
+++ b/vol6-2-article4.html
@@ -2,18 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta name="citation_title" content="Knowledge Sharing Opportunities on Safe Delivery of Children for Birth Companions in Kakamega County, Kenya"> 
-    <meta name="citation_abstract_html_url" content="http://rjikm.org/vol6-2-article4.html">
-    <meta name="citation_author" content="Alice, Moyi M.">
-    <meta name="citation_author" content="Ben, Wekalao N."> 
-    <meta name="citation_author" content="Ashah, Owano">
-    <meta name="citation_publication_date" content="2021/11/3">
-    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management">
-    <meta name="citation_pdf_url" content="http://rjikm.org/assets/img/Man%206.2.4.pdf"> 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Knowledge Sharing Opportunities on Safe Delivery of Children for Birth Companions in Kakamega County, Kenya" />
+    <meta name="citation_abstract_html_url" content="https://rjikm.org/vol6-2-article4.html" />
+    <meta name="citation_author" content="Alice, Moyi M." />
+    <meta name="citation_author" content="Ben, Wekalao N." />
+    <meta name="citation_author" content="Ashah, Owano" />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://rjikm.org/assets/img/Man%206.2.4.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="2" />
+    <meta name="citation_firstpage" content="54" />
+    <meta name="citation_lastpage" content="71" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
