--- a/vol6-2-article5.html
+++ b/vol6-2-article5.html
@@ -2,17 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta name="citation_title" content="Epistemic Deference and African Indigenous Knowledge Production"> 
-    <meta name="citation_abstract_html_url" content="http://rjikm.org/vol6-2-article5.html">
-    <meta name="citation_author" content="Francis, Kayode F.">
-    <meta name="citation_author" content="Cyril-Mary, Pius O."> 
-    <meta name="citation_publication_date" content="2021/11/3">
-    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management">
-    <meta name="citation_pdf_url" content="http://rjikm.org/assets/img/Man%206.2.5.pdf"> 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta name="citation_title" content="Epistemic Deference and African Indigenous Knowledge Production" />
+    <meta name="citation_abstract_html_url" content="https://rjikm.org/vol6-2-article5.html" />
+    <meta name="citation_author" content="Francis, Kayode F." />
+    <meta name="citation_author" content="Cyril-Mary, Pius O." />
+    <meta name="citation_publication_date" content="2021/11/3" />
+    <meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+    <meta name="citation_pdf_url" content="https://rjikm.org/assets/img/Man%206.2.5.pdf" />
+    <meta name="citation_volume" content="6" />
+    <meta name="citation_issue" content="2" />
+    <meta name="citation_firstpage" content="72" />
+    <meta name="citation_lastpage" content="82" />
     <title>RJIKM</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
