Inserting the meta tags

--- a/vol5-2-article2.html
+++ b/vol5-2-article2.html
@@ -6,6 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="description" content="" />
 	<meta name="author" content="" />
+	<meta name="citation_title" content="Adoption of Web 2.0 tools for the Promotion of Services and Resources in University Libraries in South-South, Nigeria" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol5-2-article2.html" />
+	<meta name="citation_author" content="Peterson Dewah" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%205.2.3.pdf" />
+	<meta name="citation_volume" content="5" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="85" />
+	<meta name="citation_lastpage" content="97" />
 	<title>RJIKM</title>
 	<!-- Favicon-->
 	<link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -125,7 +135,7 @@
 							libraries, South-South, Nigeria
 						</p>
 						<div>
-							<a href="assets/img/Man 5.2.2.pdf" target="_blank">Full-Text Document</a>
+							<a href="assets/img/Man 5.2.2.pdf" target="_blank">Adoption of Web 2.0 tools for the Promotion of Services and Resources in University Libraries in South-South, Nigeria</a>
 						</div>
 					</article>
 				</div>
