--- a/vol5-2-article5.html
+++ b/vol5-2-article5.html
@@ -6,6 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="description" content="" />
 	<meta name="author" content="" />
+	<meta name="citation_title" content="A meta-Analytical Review of the Role of Indigenous Knowledge on Environmental Conservation and Climate Change in Kenya" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol5-2-article5.html" />
+	<meta name="citation_author" content="Richard Guto" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%205.2.5.pdf" />
+	<meta name="citation_volume" content="5" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="65" />
+	<meta name="citation_lastpage" content="84" />
 	<title>RJIKM</title>
 	<!-- Favicon-->
 	<link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -68,7 +78,7 @@
 							Chuka University, Kenya
 							<br>
 							rguto@chuka.ac.ke / richardguto.guto@gmail.com
-						</p>target="blank"
+						</p>
 						<p>
 							<strong>Abstract</strong>
 						</p>
@@ -124,7 +134,9 @@
 							resource management, conservation and climate change, meta-analysis, Kenya
 						</p>
 						<div>
-							<a href="assets/img/Man 5.2.5.pdf" target="_blank">Full-Text Document</a>
+							<a href="assets/img/Man 5.2.5.pdf" target="_blank">A meta-Analytical Review of the Role of Indigenous Knowledge on
+							Environmental Conservation and
+							Climate Change in Kenya</a>
 						</div>
 					</article>
 				</div>
