Inserting the meta tags

--- a/vol5-1-article3.html
+++ b/vol5-1-article3.html
@@ -5,6 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="description" content="" />
 	<meta name="author" content="" />
+	<meta name="citation_title" content="Use of ICTs in Knowledge Management for Enhanced Institutional Sustainability" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol5-1-article3.html" />
+	<meta name="citation_author" content="Hawwau Adedayo Moruf" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%205.1.3.pdf" />
+	<meta name="citation_volume" content="5" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="xxx" />
+	<meta name="citation_lastpage" content="xxx" />
 	<title>RJIKM</title>
 	<!-- Favicon-->
 	<link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -61,21 +71,21 @@
                         <p style="text-align: center;">
                             Hillary Jumba
                             <br>
-                            Kenya Methodist University 
+                            Kenya Methodist University
                             <br>
                             hillaryjumba@gmail.com
                         </p>
                         <p style="text-align: center;">
                             Dorothy Bundi
                             <br>
-                            Meru University of Science and Technology 
+                            Meru University of Science and Technology
                             <br>
                             dorriegat@gmail.com
                         </p>
                         <p style="text-align: center;">
                             Jenu John
                             <br>
-                            Kenya Methodist University 
+                            Kenya Methodist University
                             <br>
                             jenujaison@gmail.com
                         </p>
@@ -109,7 +119,7 @@
                             ICTs, knowledge management, students’ information, Universities, sustainability, Kenya
                         </p>
                         <div>
-                            <a href="assets/img/Man 5.1.3.pdf">Full-Text Document</a>
+                            <a href="assets/img/Man 5.1.3.pdf">Use of ICTs in Knowledge Management for Enhanced Institutional Sustainability</a>
                         </div>
 					</article>
 				</div>
