--- a/vol5-1-article4.html
+++ b/vol5-1-article4.html
@@ -5,6 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="description" content="" />
 	<meta name="author" content="" />
+	<meta name="citation_title" content="Provision of Library Services for Quality Information Literacy in Emerging Knowledge Society: The Case of Nigerian Academic Libraries" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol5-1-article4.html" />
+	<meta name="citation_author" content="Hawwau Adedayo Moruf" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%205.1.5.pdf" />
+	<meta name="citation_volume" content="5" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="75" />
+	<meta name="citation_lastpage" content="88" />
 	<title>RJIKM</title>
 	<!-- Favicon-->
 	<link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -59,7 +69,7 @@
                             Provision of Library Services for Quality Information Literacy in Emerging Knowledge Society: The Case of Nigerian Academic Libraries
                         </h3>
                         <p style="text-align: center;" class="text-white-75 mb-4">
-                            Hawwau Adedayo Moruf (CLN) 
+                            Hawwau Adedayo Moruf (CLN)
                             <br>
                             Department of Library and Information Science,
                             <br>
@@ -84,9 +94,9 @@
                         </p>
                         <p class="text-white-75 mb-4">
                             <em>Implications</em>
-                            -The findings of study would enable stakeholders in education sector and other related agencies to support libraries objectives in imparting information literacy education by formulating educational policies that give room for information literacy education, review information literacy curricula for academic libraries, as well as support library at all levels with funds to run information literacy initiatives and programmes. 
+                            -The findings of study would enable stakeholders in education sector and other related agencies to support libraries objectives in imparting information literacy education by formulating educational policies that give room for information literacy education, review information literacy curricula for academic libraries, as well as support library at all levels with funds to run information literacy initiatives and programmes.
                         </p>
-                        <p class="text-white-75 mb-4"> 
+                        <p class="text-white-75 mb-4">
                             <em>Originality</em>
                             -This is a conceptual review paper where scholarly literature on provision of library services for quality information literacy in Nigerian academic libraries were systematically analysed and relevant cited headings adopted.
                         </p>
@@ -97,7 +107,7 @@
                             Library services, Librarians, ICT, Information Literacy, Knowledge Society, Academic library, Nigeria
                         </p>
                         <div>
-                            <a href="assets/img/Man 5.1.5.pdf">Full-Text Document</a>
+                            <a href="assets/img/Man 5.1.5.pdf">Provision of Library Services for Quality Information Literacy in Emerging Knowledge Society: The Case of Nigerian Academic Libraries</a>
                         </div>
 					</article>
 				</div>
