--- a/vol5-1-article5.html
+++ b/vol5-1-article5.html
@@ -5,6 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="description" content="" />
 	<meta name="author" content="" />
+	<meta name="citation_title" content="Selection Criteria and Usage of Automation Software among Librarians in University Libraries in South-South, Nigeria" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol5-1-article5.html" />
+	<meta name="citation_author" content="Esoswo Francisca Ogbomo" />
+	<meta name="citation_author" content="Emuejevoke Paul Ogo" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%205.1.4.pdf" />
+	<meta name="citation_volume" content="5" />
+	<meta name="citation_issue" content="1" />
+	<meta name="citation_firstpage" content="51" />
+	<meta name="citation_lastpage" content="74" />
+    <title>RJIKM</title>
 	<title>RJIKM</title>
 	<!-- Favicon-->
 	<link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -59,7 +71,7 @@
                             Selection Criteria and Usage of Automation Software among Librarians in University Libraries in South-South, Nigeria
                         </h2>
                         <p style="text-align: center;">
-                            Esoswo Francisca Ogbomo 
+                            Esoswo Francisca Ogbomo
                             <br>
                             Department of Library and Information Science
                             <br>
@@ -68,7 +80,7 @@
                             esoobas@gmail.com
                         </p>
                         <p style="text-align: center;">
-                            Emuejevoke Paul Ogo 
+                            Emuejevoke Paul Ogo
                             <br>
                             University Library, Federal University of Petroleum Resources
                             <br>
@@ -106,7 +118,7 @@
                             Selection criteria, usage, automation software, library software, South-South Nigeria
                         </p>
                         <div>
-                            <a href="assets/img/Man 5.1.4.pdf">Full-Text Document</a>
+                            <a href="assets/img/Man 5.1.4.pdf">Selection Criteria and Usage of Automation Software among Librarians in University Libraries in South-South, Nigeria</a>
                         </div>
 					</article>
 				</div>
