--- a/vol5-2-article1.html
+++ b/vol5-2-article1.html
@@ -6,6 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="description" content="" />
 	<meta name="author" content="" />
+	<meta name="citation_title" content="Mentoring for Sustaining and Maintaining Professionalism in Nigerian Academic Libraries" />
+	<meta name="citation_abstract_html_url" content="https://www.rjikm.org/vol5-2-article1.html" />
+	<meta name="citation_author" content="Peterson Dewah" />
+	<meta name="citation_publication_date" content="2021/11/3" />
+	<meta name="citation_journal_title" content="Regional Journal of Information and Knowledge Management" />
+	<meta name="citation_pdf_url" content="https://www.rjikm.org/assets/img/Man%205.2.1.pdf" />
+	<meta name="citation_volume" content="5" />
+	<meta name="citation_issue" content="2" />
+	<meta name="citation_firstpage" content="1" />
+	<meta name="citation_lastpage" content="18" />
 	<title>RJIKM</title>
 	<!-- Favicon-->
 	<link rel="icon" type="image/x-icon" href="assets/img/2.jpg" />
@@ -116,7 +126,7 @@
 							Nigeria
 						</p>
 						<div>
-							<a href="assets/img/Man 5.2.1.pdf" target="_blank">Full-Text Document</a>
+							<a href="assets/img/Man 5.2.1.pdf" target="_blank">Mentoring for Sustaining and Maintaining Professionalism in Nigerian Academic Libraries</a>
 						</div>
 					</article>
 				</div>
